--- a/GulpProject/src/index.html
+++ b/GulpProject/src/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <main>
-        <div>
+        <div class="test1">
+            <p>Hola</p>
+            <p>Hola2</p>
+        </div>
+        <div class="test2">
             <p>Hola</p>
             <p>Hola2</p>
         </div>
