--- a/GulpProject/src/index.html
+++ b/GulpProject/src/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <header>
+        <h1>ProjectKC</h1>
+    </header>
     <main>
         <div class="test1">
             <p>Hola</p>
@@ -17,6 +20,10 @@
             <p>Hola2</p>
         </div>
     </main>
+    <footer>
+        <p>Enrique Calvo Ramos <a href="mailto:encalram@gmail.com">encalram@gmail.com</a></p>
+        <p>Carlos García Díaz <a href="mailto:carlosgardia@gmail.com">carlosgardia@gmail.com</a></p>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
