Practicing HTLM/CSS

--- a/GulpProject/src/index.html
+++ b/GulpProject/src/index.html
@@ -10,20 +10,25 @@
     <header>
         <h1>ProjectKC</h1>
     </header>
-    <main>
-        <div class="test1">
-            <p>Hola</p>
-            <p>Hola2</p>
-        </div>
-        <div class="test2">
-            <p>Hola</p>
-            <p>Hola2</p>
+
+    <main class="main">
+        <h2>SERVICES</h2>
+
+        <div class="container">
+            <div class="services"><img src="https://cdn.pixabay.com/photo/2020/01/08/03/56/man-4749237_1280.jpg" alt=""><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, odit.</p></div>
+            <div class="services"><img src="https://cdn.pixabay.com/photo/2020/01/08/03/56/man-4749237_1280.jpg" alt=""><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, odit.</p></div>
+            <div class="services"><img src="https://cdn.pixabay.com/photo/2020/01/08/03/56/man-4749237_1280.jpg" alt=""><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, odit.</p></div>
+            <div class="services"><img src="https://cdn.pixabay.com/photo/2020/01/08/03/56/man-4749237_1280.jpg" alt=""><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, odit.</p></div>
+            <div class="services"><img src="https://cdn.pixabay.com/photo/2020/01/08/03/56/man-4749237_1280.jpg" alt=""><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, odit.</p></div>
+            <div class="services"><img src="https://cdn.pixabay.com/photo/2020/01/08/03/56/man-4749237_1280.jpg" alt=""><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, odit.</p></div>
         </div>
     </main>
+
     <footer>
         <p>Enrique Calvo Ramos <a href="mailto:encalram@gmail.com">encalram@gmail.com</a></p>
         <p>Carlos García Díaz <a href="mailto:carlosgardia@gmail.com">carlosgardia@gmail.com</a></p>
     </footer>
-    <script src="js/script.js"></script>
+
+<script src="js/script.js"></script>
 </body>
 </html>
