--- a/GulpProject/src/index.html
+++ b/GulpProject/src/index.html
@@ -14,10 +14,9 @@
     <link rel="stylesheet" href="css/main.css">
      <!-- embed jquery -->
      <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!-- embed external JavaScript file for app interaction -->
-    <script src="js/script.js"></script>
+
 </head>
-<body onload="onLoadData()">
+<body >
     <!-- HEADER -->
     <header id="header">
         <img id="header_logo" src="https://cdn.pixabay.com/photo/2016/12/05/03/56/travel-1883060_960_720.png" alt="ProjectKC">
@@ -25,17 +24,18 @@
     </header>
     <!-- MENU -->
     <ul id="main_menu">
-        <a href="#header"><li class="selected" onclick="switchMenu(home)"><span class="menu_button"><i class="far fa-compass"></i></span>Home</li></a>
-        <a href="#services"><li onclick="switchMenu(services)"><span class="menu_button"><i class="far fa-folder-open"></i></span>Services</li></a>
-        <li onclick="switchMenu(test1)"><span class="menu_button"><i class="far fa-surprise"></i></span>Test1</li>
-        <li onclick="switchMenu(test2)"><span class="menu_button"><i class="far fa-lemon"></i></span>Test2</li>
+        <a href="#header"><li id="home__menu" class="selected"><span class="menu_button"><i class="far fa-compass"></i></span>Home</li></a>
+        <a href="#services"><li id="services__menu" class="menu__services"><span class="menu_button"><i class="far fa-folder-open"></i></span>Services</li></a>
+        <li id="test1" ><span class="menu_button"><i class="far fa-surprise"></i></span>Test1</li>
+        <li id="test1" ><span class="menu_button"><i class="far fa-lemon"></i></span>Test2</li>
         <input type="text" name="search" placeholder="Search..">
-        <a href="#footer"><li onclick="switchMenu(about)" style="float:right">About<span class="menu_button"><i class="far fa-address-card"></i></span></li></a>  
+        <a href="#footer"><li id="about" style="float:right">About<span class="menu_button"><i class="far fa-address-card"></i></span></li></a>  
     </ul>
     <!-- MAIN -->
     <main class="main">
-        <h2>HOME</h2>
-        <div id='home'></div>
+        
+        <div id='home' class="home"><h2>HOME</h2></div>
+
         <h2>SERVICES</h2>
         <div id="services">
             <div class="services"><img src="https://cdn.pixabay.com/photo/2020/01/08/03/56/man-4749237_1280.jpg" alt=""><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, odit.</p></div>
@@ -61,5 +61,11 @@
         <p class="p_footer">Enrique Calvo Ramos <a href="mailto:encalram@gmail.com">encalram@gmail.com</a></p>
         <p class="p_footer">Carlos García Díaz <a href="mailto:carlosgardia@gmail.com">carlosgardia@gmail.com</a></p>
     </footer>
+    <!-- embed external JavaScript file for app interaction -->
+    <!-- NOTE: Si pones el JS en el head, cargas el archivo antes de cargar el body.
+        Por lo que si creas o editas el HTML desde JS no puedes acceder a ello.
+        Es mejor ponerlo siempre al final del body -->
+    <!-- <script src="js/script.js"></script> -->
+    <script src="js/test.js"></script>
 </body>
 </html>
