--- a/GulpProject/src/index.html
+++ b/GulpProject/src/index.html
@@ -14,7 +14,12 @@
     <link rel="stylesheet" href="css/main.css">
      <!-- embed jquery -->
      <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <!-- Load Babel -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body >
     <!-- HEADER -->
@@ -34,7 +39,7 @@
     <!-- MAIN -->
     <main class="main">
         
-        <div id='home' class="home"><h2>HOME</h2></div>
+        <div id="home" class="home"></div>
 
         <h2>SERVICES</h2>
         <div id="services">
@@ -67,5 +72,7 @@
         Es mejor ponerlo siempre al final del body -->
     <!-- <script src="js/script.js"></script> -->
     <script src="js/test.js"></script>
+    <!-- codigo react -->
+    <script type ="text/babel" src="js/home__page.js"></script>
 </body>
 </html>
