--- a/GulpProject/src/index.html
+++ b/GulpProject/src/index.html
@@ -14,14 +14,10 @@
     <link rel="stylesheet" href="css/main.css">
      <!-- embed jquery -->
      <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!-- Load React. -->
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-    <!-- Load Babel -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body >
+    <!-- REACT TEST -->
+    <div class="root"></div>
     <!-- HEADER -->
     <header id="header">
         <img id="header_logo" src="https://cdn.pixabay.com/photo/2016/12/05/03/56/travel-1883060_960_720.png" alt="ProjectKC">
@@ -37,10 +33,8 @@
         <a href="#footer"><li id="about" style="float:right">About<span class="menu_button"><i class="far fa-address-card"></i></span></li></a>  
     </ul>
     <!-- MAIN -->
-    <main class="main">
-        
+    <main class="main">    
         <div id="home" class="home"></div>
-
         <h2>SERVICES</h2>
         <div id="services">
             <div class="services"><img src="https://cdn.pixabay.com/photo/2020/01/08/03/56/man-4749237_1280.jpg" alt=""><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, odit.</p></div>
@@ -72,7 +66,13 @@
         Es mejor ponerlo siempre al final del body -->
     <!-- <script src="js/script.js"></script> -->
     <script src="js/test.js"></script>
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <!-- Load Babel -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <!-- codigo react -->
-    <script type ="text/babel" src="js/home__page.js"></script>
+    <script type ="text/babel" src="js/root.js"></script>
 </body>
 </html>
